Fix icons on dark mode (closes #34)

--- a/css/style.scss
+++ b/css/style.scss
@@ -83,38 +83,3 @@ div[contenteditable=false] {
   color: var(--color-main-text);
   opacity: 1;
 }
-
-
-.icon-bold {
-  background-image: url('./../../img/icons/bold.svg');
-}
-.icon-italic {
-  background-image: url('./../../img/icons/italic.svg');
-}
-.icon-underline {
-  background-image: url('./../../img/icons/underline.svg');
-}
-.icon-link {
-  background-image: url('./../../img/icons/link.svg');
-}
-.icon-ol {
-  background-image: url('./../../img/icons/ol.svg');
-}
-.icon-ul {
-  background-image: url('./../../img/icons/ul.svg');
-}
-.icon-hr {
-  background-image: url('./../../img/icons/hr.svg');
-}
-.icon-quote {
-  background-image: url('./../../img/icons/quote.svg');
-}
-.icon-paragraph {
-  background-image: url('./../../img/icons/paragraph.svg');
-}
-.icon-code {
-  background-image: url('./../../img/icons/code.svg');
-}
-.icon-image {
-  background-image: url('./../../img/icons/image.svg');
-}
